# cat

./: .gitmodules  README.md
class-documents/hw/tech-writing/: .gitignore  Makefile  modulation.tex  references.bib
class-stuff/hw/: Questionnaire_Cat_VW.docx
log/: .gitignore  Makefile  log.tex  references.bib
log/entries/april/: 02.tex  09.tex  11.tex  16.tex  23.tex  25.tex  26.tex  30.tex
log/entries/december/: 11.tex
log/entries/february/: 06.tex  07.tex  13.tex  27.tex  28.tex  29.tex
log/entries/march/: 05.tex  12.tex  14.tex  26.tex  27.tex
log/entries/november/: 03.tex  07.tex  13.tex  14.tex  16.tex  21.tex  28.tex
log/entries/october/: 00.tex  01.tex  02.tex  03.tex  10.tex  14.tex  23.tex  24.tex  31.tex
sign/: .gitignore  Makefile  sign.tex
spice/am-mod/: .gitignore  modulator.asc
work/am-mod/code/: dsb.m  ssb.m
work/am-mod/spice/: modulator.asc  ssb.asc
work/if-amp/: jw-variable.asc  lc-tank.asc
work/lna/: j-lna.asc
work/pico/data-inlet/: CMakeLists.txt
work/pico/data-inlet/src/: adc_spi.h  adc_spi.h++  blink.c++  main.c++  reference_freq.c++  reference_freq.h++
work/pll-amplifier/: amplifier.asc  notes.txt
work/pll-schematic/: .gitignore  pll-schematic.kicad_prl  pll-schematic.kicad_pro  pll-schematic.kicad_sch
work/pll-shifter/: notes.txt  pll-shifter.asc  shifter-int.asc  shifter-simple.asc
work/teensy-adc/src/: main.c++
work/teensy-pll/: platformio.ini
work/teensy-pll/src/: main.c++
